[gd_scene load_steps=20 format=3 uid="uid://cv6yalmlvdhfa"]

[ext_resource type="Script" uid="uid://pafbihw5vvlk" path="res://scripts/character_body_3d.gd" id="1_3tbxw"]
[ext_resource type="Texture2D" uid="uid://oph734p5l0am" path="res://icon.svg" id="2_bqqt8"]
[ext_resource type="Texture2D" uid="uid://bkmsqw1vpva1v" path="res://textures/rocky_terrain_diff_4k.png" id="2_ws5ob"]
[ext_resource type="Texture2D" uid="uid://d1yxfbouixk2q" path="res://textures/rocky_terrain_nor_gl_4k.png" id="3_bqqt8"]
[ext_resource type="Texture2D" uid="uid://y4jlq6bn2on3" path="res://crosshair.png" id="4_8dnxm"]
[ext_resource type="PackedScene" uid="uid://dhgljm2ocjttf" path="res://yeti_enemy.tscn" id="7_v3hs3"]
[ext_resource type="Script" uid="uid://da3usqhb6ruuv" path="res://enemy_spawner.gd" id="8_x5ji8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3tbxw"]
sky_top_color = Color(0.62929, 0.691357, 0.777869, 1)
sky_horizon_color = Color(1.24091, 1.32471, 1.35946, 1)
ground_bottom_color = Color(0.305506, 0.578645, 0.631121, 1)
ground_horizon_color = Color(1.24091, 1.32471, 1.35946, 1)

[sub_resource type="Sky" id="Sky_e3m3f"]
sky_material = SubResource("ProceduralSkyMaterial_3tbxw")

[sub_resource type="Environment" id="Environment_ws5ob"]
background_mode = 2
sky = SubResource("Sky_e3m3f")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ws5ob"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pv6b4"]
albedo_texture = ExtResource("2_bqqt8")
uv1_scale = Vector3(4.2, 4.2, 4.2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bqqt8"]

[sub_resource type="LabelSettings" id="LabelSettings_8qpgq"]

[sub_resource type="PlaneMesh" id="PlaneMesh_e3m3f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8qpgq"]
albedo_texture = ExtResource("2_ws5ob")
normal_enabled = true
normal_texture = ExtResource("3_bqqt8")
uv1_scale = Vector3(60, 60, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_3tbxw"]
size = Vector3(20, 0, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v3hs3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5ji8"]
albedo_color = Color(1, 0, 0, 1)

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ws5ob")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("ability_1_cooldown_timer", "reload_timer", "ability_1_cooldown_display", "bullet_display")]
script = ExtResource("1_3tbxw")
ability_1_cooldown_timer = NodePath("Ability1Cooldown")
reload_timer = NodePath("ReloadTimer")
ability_1_cooldown_display = NodePath("Ability1CooldownDisplay")
bullet_display = NodePath("BulletsInMagDisplay")

[node name="ReloadTimer" type="Timer" parent="player"]

[node name="Ability1Cooldown" type="Timer" parent="player"]
wait_time = 0.25
one_shot = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_ws5ob")
surface_material_override/0 = SubResource("StandardMaterial3D_pv6b4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_bqqt8")

[node name="CameraPivot" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.99277, 0)

[node name="Camera3D" type="Camera3D" parent="player/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.917819, -0.105693, 1.447)
fov = 90.0

[node name="RayCast3D" type="RayCast3D" parent="player/CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -10, 0)

[node name="Ability1CooldownDisplay" type="Label" parent="player"]
offset_right = 65.0
offset_bottom = 23.0
text = "TEXTTTT"
label_settings = SubResource("LabelSettings_8qpgq")
horizontal_alignment = 2
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 190.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("4_8dnxm")

[node name="BulletsInMagDisplay" type="Label" parent="player"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="plane" type="StaticBody3D" parent="."]

[node name="mainPlane" type="MeshInstance3D" parent="plane"]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 20, 0.20334, 0, 0)
mesh = SubResource("PlaneMesh_e3m3f")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_8qpgq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="plane"]
transform = Transform3D(1.98151, 0, 0, 0, 0.998744, 0, 0, 0, 2.02853, 0.20334, 0, 0)
shape = SubResource("BoxShape3D_3tbxw")

[node name="evilGuy" parent="." instance=ExtResource("7_v3hs3")]
transform = Transform3D(0.999998, 0.000796805, -0.00179284, -0.000800005, 0.999998, -0.00178498, 0.00179141, 0.00178641, 0.999997, 2.83961, 0.611887, 1.447)
white_material = SubResource("StandardMaterial3D_v3hs3")
red_material = SubResource("StandardMaterial3D_x5ji8")

[node name="enemySpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8278, 0.604012, 0)
script = ExtResource("8_x5ji8")
yeti_scene = ExtResource("7_v3hs3")

[node name="yetiTimer" type="Timer" parent="enemySpawner"]
wait_time = 5.0
autostart = true

[connection signal="deal_damage" from="player" to="evilGuy" method="_on_player_deal_damage"]
[connection signal="timeout" from="player/ReloadTimer" to="player" method="_on_reload_timer_timeout"]
[connection signal="timeout" from="player/Ability1Cooldown" to="player" method="_on_ability_1_cooldown_timeout"]
[connection signal="timeout" from="enemySpawner/yetiTimer" to="enemySpawner" method="_on_yeti_timer_timeout"]
